# studium

./: .gitignore  .gitmodules  BACKLOG.org  CHANGELOG.org  CMakeLists.txt  README.org  profile.sh
res/shaders/: default.fs.glsl  default.vs.glsl
src/: array.c  core.c  display.c  entity.c  glad.c  main.c  render.c  stmath.c
src/glad/: glad.h
src/studium/: array.h  core.h  display.h  entity.h  macros.h  render.h  stmath.h
test/: studium-test.c  tests.c
